UI made purty, waiting on response from Stephen/Tyler for final popover text content.

--- a/StewardClient/src/app/pages/tools/pages/services-table-storage/components/services-filterable-table/services-filterable-table.component.html
+++ b/StewardClient/src/app/pages/tools/pages/services-table-storage/components/services-filterable-table/services-filterable-table.component.html
@@ -4,21 +4,23 @@
       <mat-card-title>Services Table Storage</mat-card-title>
       <mat-card-subtitle>{{ contract?.gameTitle | humanize }}</mat-card-subtitle>
       <div class="sf-spacer"></div>
-      <mat-slide-toggle [formControl]="formControls.filterResults">Show All</mat-slide-toggle>
-      <button
-        mat-raised-button
-        class="lookup"
-        color="primary"
-        (click)="lookup()"
-        stateManager
-        [monitor]="getMonitor"
-        monitorDisable
-        monitorWarnSnackbar
-        monitorCompleteSnackbar
-      >
-        Lookup
-        <button-spinner [monitor]="getMonitor" defaultIcon="search"></button-spinner>
-      </button>
+      <div class="actions">
+        <mat-slide-toggle [formControl]="formControls.showAll">Show All</mat-slide-toggle>
+        <button
+          mat-raised-button
+          class="lookup"
+          color="primary"
+          (click)="lookup()"
+          stateManager
+          [monitor]="getMonitor"
+          monitorDisable
+          monitorWarnSnackbar
+          monitorCompleteSnackbar
+        >
+          Lookup
+          <button-spinner [monitor]="getMonitor" defaultIcon="search"></button-spinner>
+        </button>
+      </div>
     </mat-card-header>
     <mat-card-content class="sf-wrapper">
       <div class="sf-vertical">
