--- a/StewardClient/src/app/pages/tools/pages/welcome-center-tiles/steelhead/tile-components/deeplink/steelhead-deeplink-tile.component.html
+++ b/StewardClient/src/app/pages/tools/pages/welcome-center-tiles/steelhead/tile-components/deeplink/steelhead-deeplink-tile.component.html
@@ -12,165 +12,175 @@
     </mat-form-field>
     <!-- Racers Cup Destination -->
     <ng-container *ngIf="formControls.destinationType.value === destinationTypes.RacersCup">
-      <mat-form-field class="sf-default-hint" appearance="fill">
-        <mat-label>Select Series</mat-label>
-        <mat-select [formControl]="formControls.racersCupSeries">
-          <mat-option *ngFor="let serie of racersCupSeries | keyvalue" [value]="serie.key">
-            {{ serie.value | humanize }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </ng-container>
-    <!-- Builders Cup Destination -->
-    <ng-container *ngIf="formControls.destinationType.value === destinationTypes.BuildersCup">
-      <mat-form-field class="sf-default-hint" appearance="fill">
-        <mat-label>Select Setting Type</mat-label>
-        <mat-select [formControl]="formControls.buildersCupSettingType">
-          <mat-option *ngFor="let setting of buildersCupSetting" [value]="setting">
-            {{ setting }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-      <!-- Only Homepage settings does not have championship dropdown -->
-      <ng-container
-        *ngIf="formControls.buildersCupSettingType.value !== buildersCupSettingTypes.Homepage"
-      >
-        <mat-form-field class="sf-default-hint" appearance="fill">
-          <mat-label>Select Championship</mat-label>
-          <mat-select [formControl]="formControls.buildersCupChampionship">
-            <mat-option
-              *ngFor="let championship of championships | keyvalue"
-              [value]="championship.key"
-            >
-              {{ championship.value | humanize }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </ng-container>
-      <ng-container
-        *ngIf="formControls.buildersCupSettingType.value === buildersCupSettingTypes.Ladder"
-      >
-        <mat-form-field class="sf-default-hint" appearance="fill">
-          <mat-label>Select Ladder</mat-label>
-          <mat-select [formControl]="formControls.buildersCupLadder">
-            <mat-option *ngFor="let ladder of buildersCupLadders | keyvalue" [value]="ladder.key">
-              {{ ladder.value | humanize }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </ng-container>
-      <ng-container
-        *ngIf="formControls.buildersCupSettingType.value === buildersCupSettingTypes.Series"
-      >
+      <ng-container *waitForMonitor="referenceDataMonitor">
         <mat-form-field class="sf-default-hint" appearance="fill">
           <mat-label>Select Series</mat-label>
-          <mat-select [formControl]="formControls.buildersCupSeries">
-            <mat-option *ngFor="let serie of buildersCupSeries | keyvalue" [value]="serie.key">
+          <mat-select [formControl]="formControls.racersCupSeries">
+            <mat-option *ngFor="let serie of racersCupSeries | keyvalue" [value]="serie.key">
               {{ serie.value | humanize }}
             </mat-option>
           </mat-select>
         </mat-form-field>
       </ng-container>
     </ng-container>
+    <!-- Builders Cup Destination -->
+    <ng-container *ngIf="formControls.destinationType.value === destinationTypes.BuildersCup">
+      <ng-container *waitForMonitor="referenceDataMonitor">
+        <mat-form-field class="sf-default-hint" appearance="fill">
+          <mat-label>Select Setting Type</mat-label>
+          <mat-select [formControl]="formControls.buildersCupSettingType">
+            <mat-option *ngFor="let setting of buildersCupSetting" [value]="setting">
+              {{ setting }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <!-- Only Homepage settings does not have championship dropdown -->
+        <ng-container
+          *ngIf="formControls.buildersCupSettingType.value !== buildersCupSettingTypes.Homepage"
+        >
+          <mat-form-field class="sf-default-hint" appearance="fill">
+            <mat-label>Select Championship</mat-label>
+            <mat-select [formControl]="formControls.buildersCupChampionship">
+              <mat-option
+                *ngFor="let championship of buildersCupChampionships | keyvalue"
+                [value]="championship.key"
+              >
+                {{ championship.value | humanize }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </ng-container>
+        <ng-container
+          *ngIf="formControls.buildersCupSettingType.value === buildersCupSettingTypes.Ladder"
+        >
+          <mat-form-field class="sf-default-hint" appearance="fill">
+            <mat-label>Select Ladder</mat-label>
+            <mat-select [formControl]="formControls.buildersCupLadder">
+              <mat-option *ngFor="let ladder of buildersCupLadders | keyvalue" [value]="ladder.key">
+                {{ ladder.value | humanize }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </ng-container>
+        <ng-container
+          *ngIf="formControls.buildersCupSettingType.value === buildersCupSettingTypes.Series"
+        >
+          <mat-form-field class="sf-default-hint" appearance="fill">
+            <mat-label>Select Series</mat-label>
+            <mat-select [formControl]="formControls.buildersCupSeries">
+              <mat-option *ngFor="let serie of buildersCupSeries | keyvalue" [value]="serie.key">
+                {{ serie.value | humanize }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </ng-container>
+      </ng-container>
+    </ng-container>
     <!-- Rivals Destination -->
     <ng-container *ngIf="formControls.destinationType.value === destinationTypes.Rivals">
-      <mat-form-field class="sf-default-hint" appearance="fill">
-        <mat-label>Select Setting Type</mat-label>
-        <mat-select [formControl]="formControls.rivalsSettingType">
-          <mat-option *ngFor="let setting of rivalsSetting" [value]="setting">
-            {{ setting }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-      <!-- Only Homepage settings does not have category dropdown -->
-      <ng-container *ngIf="formControls.rivalsSettingType.value !== rivalsSettingTypes.Homepage">
+      <ng-container *waitForMonitor="referenceDataMonitor">
         <mat-form-field class="sf-default-hint" appearance="fill">
-          <mat-label>Select Category</mat-label>
-          <mat-select [formControl]="formControls.rivalsCategory">
-            <mat-option
-              *ngFor="let rivalsCategory of rivalsCategories | keyvalue"
-              [value]="rivalsCategory.key"
-            >
-              {{ rivalsCategory.value | humanize }}
+          <mat-label>Select Setting Type</mat-label>
+          <mat-select [formControl]="formControls.rivalsSettingType">
+            <mat-option *ngFor="let setting of rivalsSetting" [value]="setting">
+              {{ setting }}
             </mat-option>
           </mat-select>
         </mat-form-field>
-      </ng-container>
-      <ng-container *ngIf="formControls.rivalsSettingType.value === rivalsSettingTypes.Event">
-        <mat-form-field class="sf-default-hint" appearance="fill">
-          <mat-label>Select Event</mat-label>
-          <mat-select [formControl]="formControls.rivalsEvent">
-            <mat-option
-              *ngFor="let rivalsEvent of rivalsEvents | keyvalue"
-              [value]="rivalsEvent.key"
-            >
-              {{ rivalsEvent.value | humanize }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+        <!-- Only Homepage settings does not have category dropdown -->
+        <ng-container *ngIf="formControls.rivalsSettingType.value !== rivalsSettingTypes.Homepage">
+          <mat-form-field class="sf-default-hint" appearance="fill">
+            <mat-label>Select Category</mat-label>
+            <mat-select [formControl]="formControls.rivalsCategory">
+              <mat-option
+                *ngFor="let rivalsCategory of rivalsCategories | keyvalue"
+                [value]="rivalsCategory.key"
+              >
+                {{ rivalsCategory.value | humanize }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </ng-container>
+        <ng-container *ngIf="formControls.rivalsSettingType.value === rivalsSettingTypes.Event">
+          <mat-form-field class="sf-default-hint" appearance="fill">
+            <mat-label>Select Event</mat-label>
+            <mat-select [formControl]="formControls.rivalsEvent">
+              <mat-option
+                *ngFor="let rivalsEvent of rivalsEvents | keyvalue"
+                [value]="rivalsEvent.key"
+              >
+                {{ rivalsEvent.value | humanize }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </ng-container>
       </ng-container>
     </ng-container>
     <!-- Showroom Destination -->
     <ng-container *ngIf="formControls.destinationType.value === destinationTypes.Showroom">
-      <mat-form-field class="sf-default-hint" appearance="fill">
-        <mat-label>Select Setting Type</mat-label>
-        <mat-select [formControl]="formControls.showroomSettingType">
-          <mat-option *ngFor="let setting of showroomSetting" [value]="setting">
-            {{ setting }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-      <ng-container *ngIf="formControls.showroomSettingType.value === showroomSettingTypes.Car">
+      <ng-container *waitForMonitor="referenceDataMonitor">
         <mat-form-field class="sf-default-hint" appearance="fill">
-          <mat-label>Select Car</mat-label>
-          <mat-select [formControl]="formControls.showroomCar">
-            <mat-option
-              *ngFor="let showroomCar of showroomCars | keyvalue"
-              [value]="showroomCar.key"
-            >
-              {{ showroomCar.value | humanize }}
+          <mat-label>Select Setting Type</mat-label>
+          <mat-select [formControl]="formControls.showroomSettingType">
+            <mat-option *ngFor="let setting of showroomSetting" [value]="setting">
+              {{ setting }}
             </mat-option>
           </mat-select>
         </mat-form-field>
-      </ng-container>
-      <ng-container
-        *ngIf="formControls.showroomSettingType.value === showroomSettingTypes.Manufacturer"
-      >
-        <mat-form-field class="sf-default-hint" appearance="fill">
-          <mat-label>Select Manufacturer</mat-label>
-          <mat-select [formControl]="formControls.showroomManufacturer">
-            <mat-option
-              *ngFor="let showroomManufacturer of showroomManufacturers | keyvalue"
-              [value]="showroomManufacturer.key"
-            >
-              {{ showroomManufacturer.value | humanize }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+        <ng-container *ngIf="formControls.showroomSettingType.value === showroomSettingTypes.Car">
+          <mat-form-field class="sf-default-hint" appearance="fill">
+            <mat-label>Select Car</mat-label>
+            <mat-select [formControl]="formControls.showroomCar">
+              <mat-option
+                *ngFor="let showroomCar of showroomCars | keyvalue"
+                [value]="showroomCar.key"
+              >
+                {{ showroomCar.value | humanize }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </ng-container>
+        <ng-container
+          *ngIf="formControls.showroomSettingType.value === showroomSettingTypes.Manufacturer"
+        >
+          <mat-form-field class="sf-default-hint" appearance="fill">
+            <mat-label>Select Manufacturer</mat-label>
+            <mat-select [formControl]="formControls.showroomManufacturer">
+              <mat-option
+                *ngFor="let showroomManufacturer of showroomManufacturers | keyvalue"
+                [value]="showroomManufacturer.key"
+              >
+                {{ showroomManufacturer.value | humanize }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </ng-container>
       </ng-container>
     </ng-container>
     <!-- Store Destination -->
     <ng-container *ngIf="formControls.destinationType.value === destinationTypes.Store">
-      <mat-form-field class="sf-default-hint" appearance="fill">
-        <mat-label>Select Setting Type</mat-label>
-        <mat-select [formControl]="formControls.storeSettingType">
-          <mat-option *ngFor="let setting of storeSetting" [value]="setting">
-            {{ setting }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-      <ng-container *ngIf="formControls.storeSettingType.value === storeSettingTypes.Product">
+      <ng-container *waitForMonitor="referenceDataMonitor">
         <mat-form-field class="sf-default-hint" appearance="fill">
-          <mat-label>Select Product</mat-label>
-          <mat-select [formControl]="formControls.storeProduct">
-            <mat-option
-              *ngFor="let storeProduct of storeProducts | keyvalue"
-              [value]="storeProduct.key"
-            >
-              {{ storeProduct.value | humanize }}
+          <mat-label>Select Setting Type</mat-label>
+          <mat-select [formControl]="formControls.storeSettingType">
+            <mat-option *ngFor="let setting of storeSetting" [value]="setting">
+              {{ setting }}
             </mat-option>
           </mat-select>
         </mat-form-field>
+        <ng-container *ngIf="formControls.storeSettingType.value === storeSettingTypes.Product">
+          <mat-form-field class="sf-default-hint" appearance="fill">
+            <mat-label>Select Product</mat-label>
+            <mat-select [formControl]="formControls.storeProduct">
+              <mat-option
+                *ngFor="let storeProduct of storeProducts | keyvalue"
+                [value]="storeProduct.key"
+              >
+                {{ storeProduct.value | humanize }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </ng-container>
       </ng-container>
     </ng-container>
     <div>
