--- a/StewardClient/src/app/pages/tools/pages/welcome-center-tiles/steelhead/tile-components/steelhead-general-tile.component.html
+++ b/StewardClient/src/app/pages/tools/pages/welcome-center-tiles/steelhead/tile-components/steelhead-general-tile.component.html
@@ -62,21 +62,23 @@
     </mat-form-field>
     <ng-container *ngIf="formControls.timerInstance.value">
       <!-- Show a reference dropdown if needed (Every timer instance except Custom) -->
-      <mat-form-field
-        *ngIf="selectedTimerReferenceInstance"
-        class="sf-default-hint"
-        appearance="fill"
-      >
-        <mat-label>Select {{ selectedTimerReferenceInstance }}</mat-label>
-        <mat-select [formControl]="formControls.timerReferenceId">
-          <mat-option
-            *ngFor="let referenceOption of timerReferenceOptions | keyvalue"
-            [value]="referenceOption.key"
-          >
-            {{ referenceOption.value | humanize }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
+      <ng-container *waitForMonitor="getTimerReferenceMonitor">
+        <mat-form-field
+          *ngIf="selectedTimerReferenceInstance"
+          class="sf-default-hint"
+          appearance="fill"
+        >
+          <mat-label>Select {{ selectedTimerReferenceInstance }}</mat-label>
+          <mat-select [formControl]="formControls.timerReferenceId">
+            <mat-option
+              *ngFor="let referenceOption of timerReferenceOptions | keyvalue"
+              [value]="referenceOption.key"
+            >
+              {{ referenceOption.value | humanize }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </ng-container>
 
       <!-- If timer instance is not a reference show field for Custom Instance -->
       <div class="sf-horizontal" *ngIf="!selectedTimerReferenceInstance">
