--- a/StewardClient/src/app/shared/views/player-ugc/woodstock/hidden/woodstock-player-hidden-ugc.component.html
+++ b/StewardClient/src/app/shared/views/player-ugc/woodstock/hidden/woodstock-player-hidden-ugc.component.html
@@ -1,6 +1,6 @@
 <woodstock-ugc-filters (changes)="changeUgcFilters($event)"></woodstock-ugc-filters>
 
-<ng-container *ngIf="!getMonitor?.status?.error; else failstate">
+<ng-container *waitForMonitor="getMonitor">
   <woodstock-ugc-table
     [content]="filteredUgcContent"
     [contentType]="contentType"
@@ -10,7 +10,3 @@
 </ng-container>
 
 <mat-progress-spinner *ngIf="getMonitor?.isActive" mode="indeterminate"> </mat-progress-spinner>
-
-<ng-template #failstate>
-  <json-dump [input]="getMonitor?.status?.error">Failed to search UGC content.</json-dump>
-</ng-template>
