--- a/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
+++ b/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
@@ -81,10 +81,7 @@
             <ng-template ngPluralCase="=1">Ugc </ng-template>
             <ng-template ngPluralCase="other">Ugcs </ng-template>
           </span>
-          <button-spinner
-            [monitor]="reportUgcMonitor"
-            defaultIcon="report"
-          ></button-spinner>
+          <button-spinner [monitor]="reportUgcMonitor" defaultIcon="report"></button-spinner>
         </button>
       </div>
       <div class="sf-horizontal sf-right">
