--- a/StewardClient/src/app/pages/tools/pages/ugc/pages/steelhead/steelhead-search-ugc.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc/pages/steelhead/steelhead-search-ugc.component.html
@@ -65,6 +65,9 @@
         >
           Load Curated Ugc
           <button-spinner defaultIcon="search" [monitor]="getMonitor"></button-spinner>
+          <help-popover-icon cardTitle="Load Curated Ugc">
+            <div>Loading Curated UGC queues will return the first 500 of the queue.</div>
+          </help-popover-icon>
         </button>
       </div>
     </form>
