--- a/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
+++ b/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
@@ -51,7 +51,7 @@
             ></button-spinner>
           </button>
         </div>
-        <p *ngIf="selectedPrivateUgcCount" class="warn">
+        <p *ngIf="selectedPrivateUgcCount" class="sf-text-warn">
           You have selected {{ selectedPrivateUgcCount }} Private UGC which will be ignored by the
           Hide action.
         </p>
