--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/woodstock-lookup/woodstock-lookup.component.html
@@ -244,7 +244,7 @@
 
       <toggle-list-ez
         [contract]="geoFlagsToggleListEzContract"
-        [disabled]="canChangeGeoFlags"
+        [disabled]="!canChangeGeoFlags"
         (afterSubmitted)="updateGeoFlagsModel($event)"
       >
         <help-popover-icon cardTitle="Geo Flags" confluenceName="Geo Flags Card">
