--- a/StewardClient/src/app/pages/tools/pages/ugc-details/pages/steelhead-lookup/steelhead-lookup.component.html
+++ b/StewardClient/src/app/pages/tools/pages/ugc-details/pages/steelhead-lookup/steelhead-lookup.component.html
@@ -20,6 +20,9 @@
           <model-dump-simple-table
             [values]="source.processedModel.extractedNumbers.ids"
           ></model-dump-simple-table>
+          <model-dump-simple-table
+            [values]="source.processedModel.extractedDates.all"
+          ></model-dump-simple-table>
           <model-dump-flags></model-dump-flags>
         </div>
       </div>
@@ -88,11 +91,12 @@
                 <span>Report</span>
               </button>
             </div>
-            <div class="sf-horizontal do-not-manipulate-margin">
+            <div *ngIf="!ugcItem?.isHidden" class="sf-horizontal do-not-manipulate-margin">
               <verify-button
                 #verifyHideBtn
                 [permissionAttribute]="hidePermAttribute"
                 [permissionTitle]="gameTitle"
+                [disabled]="!ugcItem?.isPublic"
               ></verify-button>
               <button
                 class="sf-action-list-margins"
@@ -107,18 +111,33 @@
                 monitorWarnSnackbar
                 monitorCompleteSnackbar
               >
-                <help-popover-icon cardTitle="Hide UGC">
-                  <p>
-                    Hidden UGC will be removed from the game, but can be restored after the fact in
-                    the Hidden UGC section of Player Details.
-                  </p>
-                  <p>Be advised, for the moment Steelhead can't easily identify hidden UGC.</p>
-                  <p>
-                    If hiding UGC fails, please lookup the Creator and check their UGC tab in Player
-                    Details and verify the UGC is not already hidden.
-                  </p>
-                </help-popover-icon>
                 Hide UGC
+                <help-popover-icon cardTitle="Hide UGC"
+                  >Private UGC cannot be hidden.</help-popover-icon
+                >
+              </button>
+            </div>
+
+            <div *ngIf="ugcItem.isHidden" class="sf-horizontal do-not-manipulate-margin">
+              <verify-button
+                #verifyUnhideBtn
+                [permissionAttribute]="unhidePermAttribute"
+                [permissionTitle]="gameTitle"
+              ></verify-button>
+              <button
+                class="sf-action-list-margins"
+                mat-raised-button
+                color="warn"
+                [verifyWithV2]="verifyUnhideBtn"
+                (click)="unhideUgcItem()"
+                stateManager
+                [monitor]="unhideMonitor"
+                monitorDisable
+                monitorWarn
+                monitorWarnSnackbar
+                monitorCompleteSnackbar
+              >
+                Unhide UGC
               </button>
             </div>
           </div>
