--- a/StewardClient/src/app/pages/tools/pages/product-pricing/product-pricing.component.html
+++ b/StewardClient/src/app/pages/tools/pages/product-pricing/product-pricing.component.html
@@ -1,9 +1,7 @@
 <section>
   <mat-card>
     <mat-card-header>
-      <mat-card-title>
-        Product Pricing
-      </mat-card-title>
+      <mat-card-title> Product Pricing </mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <form>
@@ -14,7 +12,7 @@
               *ngFor="let product of products | keyvalue"
               [value]="product.value"
               (onSelectionChange)="productSelectionChanged($event)"
-            >{{product.key}}
+              >{{ product.key }}
             </mat-option>
           </mat-select>
         </mat-form-field>
@@ -25,34 +23,19 @@
           <ng-container matColumnDef="currencyCode">
             <th mat-header-cell *matHeaderCellDef>Currency Code</th>
             <td mat-cell *matCellDef="let entry">
-              {{entry.currencyCode}}
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="listPrice">
-            <th mat-header-cell *matHeaderCellDef>List Price</th>
-            <td mat-cell *matCellDef="let entry">
-              {{entry.listPrice}}
+              {{ entry.currencyCode }}
             </td>
           </ng-container>
           <ng-container matColumnDef="msrp">
-            <th mat-header-cell *matHeaderCellDef>MSRP</th>
+            <th mat-header-cell *matHeaderCellDef class="column-spacing">MSRP</th>
             <td mat-cell *matCellDef="let entry">
-              {{entry.msrp}}
-            </td>
-          </ng-container>
-          <ng-container matColumnDef="wholesalePrice">
-            <th mat-header-cell *matHeaderCellDef>Wholesale Price</th>
-            <td mat-cell *matCellDef="let entry">
-              {{entry.wholesalePrice}}
+              {{ entry.msrp }}
             </td>
           </ng-container>
           <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
           <tr mat-row *matRowDef="let element; columns: columnsToDisplay"></tr>
         </table>
       </ng-container>
-
-
-
     </mat-card-content>
   </mat-card>
 </section>
