--- a/packages/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
+++ b/packages/StewardClient/src/app/shared/views/ugc-table/ugc-table.component.html
@@ -185,6 +185,10 @@
           <b>Featured:</b>
           {{ entry.featuredByT10 ? (entry.featuredEndDateUtc | utcDate: 'short') : 'No' }}
         </li>
+        <li>
+          <b>Force Featured:</b>
+          {{ entry.featuredByT10 ? (entry.forceFeaturedEndDateUtc | utcDate: 'short') : 'No' }}
+        </li>
         <li><b>Title:</b> {{ entry.title }}</li>
         <li><b>Description:</b> {{ entry.description }}</li>
         <li><b>Created:</b> {{ entry.createdDateUtc | utcDate: 'short' }}</li>
@@ -298,6 +302,10 @@
         <li>
           <b>Featured:</b>
           {{ entry.featuredByT10 ? (entry.featuredEndDateUtc | utcDate: 'short') : 'No' }}
+        </li>
+        <li>
+          <b>Force Featured:</b>
+          {{ entry.featuredByT10 ? (entry.forceFeaturedEndDateUtc | utcDate: 'short') : 'No' }}
         </li>
         <li><b>Title:</b> {{ entry.title }}</li>
         <li><b>Description:</b> {{ entry.description }}</li>
