Migrate SCSS div to calc(x / y)

--- a/packages/StewardClient/src/app/shared/modules/endpoints/endpoints-nav-tool/endpoints-nav-tool.component.scss
+++ b/packages/StewardClient/src/app/shared/modules/endpoints/endpoints-nav-tool/endpoints-nav-tool.component.scss
@@ -32,7 +32,7 @@ $tile-gap-size: 1px;
 
   .entry {
     border: 1px solid transparent;
-    margin: $tile-gap-size / 2;
+    margin: calc($tile-gap-size / 2);
     width: $tile-size;
     height: $tile-size;
     background-color: app-color-default-contrast($app-primary, 0.3);
