--- a/packages/StewardClient/src/app/pages/unauthorized/unauthorized.component.scss
+++ b/packages/StewardClient/src/app/pages/unauthorized/unauthorized.component.scss
@@ -12,7 +12,7 @@ mat-card {
 
   a[mat-raised-button] {
     display: block;
-    width: ($intro-card-width / 2);
+    width: calc($intro-card-width / 2);
     margin-top: $gap-medium;
     margin-left: auto;
     margin-right: auto;
