--- a/packages/StewardClient/src/styles/mixins/_index.scss
+++ b/packages/StewardClient/src/styles/mixins/_index.scss
@@ -8,3 +8,4 @@ $icomoon-font-path: '/assets/icon-font/fonts';
 @import './variables';
 @import './helpers';
 @import './tweaks/';
+@import './colors/';
