Fix default icon and add to changelog

--- a/packages/StewardClient/src/app/pages/tools/pages/create-auction/components/create-single-auction/create-single-auction.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/create-auction/components/create-single-auction/create-single-auction.component.html
@@ -22,7 +22,8 @@
         [disabled]="!formGroup.valid"
         [verifyWithV2]="verifySubmitBtn"
       >
-        Create Auction <button-spinner [monitor]="submitCreateAuctionMonitor"></button-spinner>
+        Create Auction
+        <button-spinner [monitor]="submitCreateAuctionMonitor" defaultIcon="add"></button-spinner>
       </button>
     </div>
   </mat-card-header>
