Remove T10Id lookup option in Services Table Storage component.

--- a/packages/StewardClient/src/app/pages/tools/pages/services-table-storage/services-table-storage.component.html
+++ b/packages/StewardClient/src/app/pages/tools/pages/services-table-storage/services-table-storage.component.html
@@ -21,6 +21,7 @@
   </a>
   <span class="icon-spacer"></span>
   <player-selection-single
+    [disableLookupTypes]="['t10Id']"
     [displayInSingleLine]="true"
     [specialIdentitiesAllowed]="specialIdentitiesAllowed"
     (found)="found($event)"
